# projf-explore

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.github/: FUNDING.yml
common/: README.md  debounce.sv  display_timings.sv  display_timings_24x18.sv  display_timings_480p.sv  display_timings_720p.sv  lfsr.sv  linebuffer.sv  rom_async.sv  rom_sync.sv  tmds_encoder_dvi.sv  xd.sv
fpga-ad-astra/: README.md  display_timings.sv  display_timings_480p.sv  font_unscii_16x16_hiragana.mem  greets.mem  lfsr.sv  lint.sh  rom_sync.sv  sprite.sv  starfield.sv
fpga-graphics/: README.md  display_timings.sv  display_timings_480p.sv  display_timings_720p.sv  lint.sh
fpga-on-screen/: README.md
fpga-pong/: README.md  debounce.sv  display_timings.sv  display_timings_1080p.sv  display_timings_480p.sv  display_timings_720p.sv
fpga-shapes/: README.md  display_timings_480p.sv  draw_line.sv  draw_rectangle.sv  draw_rectangle_fill.sv  framebuffer.sv  framebuffer_db.sv  linebuffer.sv  lint.sh  pix_addr.sv
framebuffers/: README.md  display_timings.sv  display_timings_480p.sv  framebuffer.sv  lfsr.sv  linebuffer.sv  linebuffer_new.sv  lint.sh
graphics/: README.md
graphics/fpga-graphics/verilator/: CMakeLists.txt  README.md  main_beam.cpp  main_bounce.cpp  main_square.cpp  top_beam.sv  top_bounce.sv  top_square.sv
hardware-sprites/: README.md  display_timings.sv  display_timings_480p.sv  lint.sh  rom_sync.sv  sprite.sv  sprite_v1.sv  sprite_v2.sv  sprite_v3.sv
hello-arty/: README.md  arty.xdc
hello-arty-1/: README.md  arty.xdc
hello-nexys/: README.md
(+1358 files in other folders)
